# word-brain-solver

./: CMakeLists.txt  LICENSE  README.md  input.txt  input2.txt  input4.txt  input5.txt  main.py
src/: CMakeLists.txt
src/libboard/: Board.cpp  Board.h  CMakeLists.txt  Move.cpp  Move.h  Tile.cpp  Tile.h
src/libdictionary/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  TrieUnixDictionary.cpp  TrieUnixDictionary.h  UnixDictionary.cpp  UnixDictionary.h
src/liblogger/: CMakeLists.txt  Logger.cpp  Logger.h
src/libopt/: CMakeLists.txt  Opt.cpp  Opt.h
src/libreader/: CMakeLists.txt  FileReader.cpp  FileReader.h  Reader.cpp  Reader.h  reader.cpp  reader.h
src/librules/: CMakeLists.txt  Rules.cpp  Rules.h
src/libsolver/: CMakeLists.txt  Solver.cpp  Solver.h  State.cpp  State.h
src/libtimer/: CMakeLists.txt  Timer.cpp  Timer.h
src/solver/: CMakeLists.txt  easy.board  hard.board  hard.board.solution  hard2.board  hard2.board.solution  input.board  input.board.solution  main.cpp  medium.board  medium.board.solution
tst/: CMakeLists.txt
tst/test_board/: CMakeLists.txt  test_board.cpp
tst/test_dictionary/: CMakeLists.txt  test_dictionary.cpp
tst/test_reader/: CMakeLists.txt  test.board  test_reader.cpp
tst/test_timer/: CMakeLists.txt  test_timer.cpp
