cmake_minimum_required (VERSION 2.8.11)
project (word-brain-solver)
set(Boost_USE_STATIC_LIBS        ON) # only find static libs
set(Boost_USE_MULTITHREADED      ON)
set(Boost_USE_STATIC_RUNTIME    OFF)
find_package(Boost 1.55.0 COMPONENTS date_time)
#if(Boost_FOUND)
  #include_directories(${Boost_INCLUDE_DIRS})
  #add_executable(foo foo.cc)
  #target_link_libraries(foo ${Boost_LIBRARIES})
#endif()
include_directories (${Boost_INCLUDE_DIRS})
add_compile_options(--std=c++11)

add_subdirectory (src)
add_subdirectory (tst)